# polkadot-stack-template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  FEEDBACK.md  INSTALL.md  Makefile  README.md  deployments.json  docker-compose.yml
.github/workflows/: ci-audit.yml  ci-evm.yml  ci-pvm.yml  ci-rust.yml  ci-web.yml  deploy-frontend.yml
blockchain/runtime/: Cargo.toml
cli/: Cargo.toml  README.md
cli/aperio/: README.md
cli/src/: main.rs
cli/src/commands/: config.rs  crrp.rs  mod.rs
cli/src/commands/crrp/: args.rs  command.rs  git.rs  mock.rs  mod.rs  model.rs  preflight.rs  tests.rs  wallet.rs
cli/src/commands/crrp/command/: create_repo.rs  fetch.rs  merge.rs  mod.rs  output.rs  proposals.rs  propose.rs  release.rs  repo.rs  review.rs  status.rs
cli/src/commands/crrp/wallet/: approval.rs  mod.rs  papp.rs  session.rs
cli/wallet-bridge/: package-lock.json  package.json  pwallet-hostpapp.mjs  pwallet-sign.mjs
contracts/: README.md
contracts/evm/: hardhat.config.ts  package-lock.json  package.json
contracts/pvm/: hardhat.config.ts  package-lock.json  package.json
docker/: Dockerfile.node
docs/: CLI.md  DEPLOYMENT.md  INSTALL.md  PROJECT.md
docs/slides/: README.md  package-lock.json  package.json  presentation.md  reveal.json  slides.md  theme.css
scripts/: README.md  common.sh  deploy-frontend.sh  download-sdk-binaries.sh  start-all.sh  start-dev.sh  start-frontend.sh  start-local.sh
web/: .env.example  .env.paseo  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/.papi/: polkadot-api.json
(+52 files in other folders)
